--- a/index.html
+++ b/index.html
@@ -12,26 +12,9 @@
         <h1>Pokédex</h1>
       </div>
 
-      <div class="cards">
-        <div class="card">
-          <div class="title">
-            <h2>Bulbasaur</h2>
-            <small># 1</small>
-          </div>
-          <div class="img">
-            <img
-              src="https://pokeres.bastionbot.org/images/pokemon/1.png"
-              alt=""
-            />
-          </div>
-          <div class="type">
-            <p>Grass</p>
-          </div>
-          <button class="favorite">
-            <div class="heart"></div>
-          </button>
-        </div>
-      </div>
+      <div class="cards"></div>
     </div>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
